<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Rally Point</string>
    <string name="action_settings">Settings</string>
    <string name="campus_name">Columbia University (Default)</string>
    <string name="logo_description">The RallyPoint Logo: a red flag on a round base</string>
	<string name="default_value">(Default)</string>
    
    <!-- Action Bar -->
    <string name="settings_label">Settings</string>
    <string name="action_search">Search</string>

    <!-- Login screen -->
    <string name="welcome_message">Find or start  a cab share group 
        going between your school and a popular destination.</string>
    <string name="go_to_registration">First time user? Register here!</string>
    <string name="button_login">log me in!</string>
    <string name="password_field">your password</string>
    <string name="error_message_login">Incorrect email/password.</string>
    <string name="error_message_server">Server error. Please try again later.</string>

    <!-- Registration screen -->
    <string name="confirmation_email_notice">Sign up and we\'ll send you a 
        confirmation email. Then you\'re set.</string>
    <string name="input_email">.edu email address</string>
    <string name="first_name">your first name</string>
    <string name="button_signup">sign me up!</string>
    <string name="password_hint">pick a password</string>
    <string name="go_to_login">Already a user? Login here!</string>
    <string name="error_message_name_length">Names must be 2–20 characters long.</string>
    <string name="error_message_invalid_edu_email">Invalid .edu email address.</string>
    <string name="error_message_registered_schools">You must use a registered school\'s edu address.</string>
    <string name="error_message_registration">Error occurred in registration. (Account already exists?)</string>
    <string name="error_message_password_length">Your password must be between 5 and 25 characters long.</string>

    <string-array name="registered_colleges">
        <item>"columbia"</item>
        <item>"barnard"</item>
        <item>"nyu"</item>
    </string-array>

    <!-- Dashboard -->
    <string name="dashboard_activity_title">Home</string>
    <string name="greet_user">Welcome! Your network is:</string>
    <string name="prompt_activity">Where are you headed?</string>
    <string name="button_browse_groups">Browse cab shares</string>
    <string name="button_new_from_school_trip">from campus</string>
    <string name="button_new_to_school_trip">to campus</string>
    <string name="confirmation_message"><center>Confirmed! You made a new cab share group.</center></string>
    <string name="button_logout">Logout</string>

    <!-- Search Activities -->
    <string name="new_to_campus_group">Create new to campus cab share</string>
    <string name="new_from_campus_group">Create new from campus cab share</string>
    
    <!-- New Group Activity -->
    <string name="to_campus_new_group_activity_title">Trip details: heading to campus</string>
    <string name="from_campus_new_group_activity_title">Trip details: away from campus</string>
    <string name="summary">Summary:</string>
    <string name="meeting_point"><b>Meeting point</b>:</string>
    <string name="dialog_title_end_location"><b>Destination:</b></string>
    <string name="dialog_title_start_location"><b>Meeting point:</b></string>
    <string name="dialog_title_date"><b>Set date:</b></string>
    <string name="dialog_title_time"><b>Set time:</b></string>
    <string name="button_time">Select time</string>
    <string name="button_date">Select date</string>
    <string name="button_meeting_point">Select meeting point</string>
    <string name="button_destination">Select destination</string>
    <string name="departure"><b>Taxi departure date</b>: </string>
    <string name="time"><b>Exact taxi departure time</b>: </string>
    <string name="button_submit">Submit</string>
    
    <!-- Single Group Activity -->
    <string name="button_join_group">join this group</string>
    
    <string name="title_activity_search">Browse groups</string>
    <string name="title_activity_single_contact">This group</string>

</resources>
